Fix recursive problem and configured for new dto